fix Loading.vue + fix overflow + begin frame editor

--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,8 @@ a:hover {
 body {
     margin: 0;
     display: flex;
-    min-height: 100svh;
+    height: 100svh;
+    max-height: 100svh;
     cursor: url("./assets/mouse.png") 16 4, pointer;
 }
 
@@ -62,7 +63,7 @@ button, label[tabindex] {
     flex: 1;
     text-align: center;
     display: grid;
-    grid-template-rows: auto auto 1fr 3rem auto;
+    grid-template-rows: auto 3rem 1fr 3rem auto;
     gap: 0.5rem;
     padding: 0.5rem;
 }
